--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                      </div>
 
                      <div class="col-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$<span id="Subtotal">1278</span></h5>
+                        <h5>$<span id="tax">190</span></h5>
+                        <h5>$<span id="total">1469</span> </h5>
                      </div>
                   </div>
                </div>
